# perturb-data-lab

./: .gitignore  DESIGN.md  README.md  STAGE2_CONTRACT.md  pyproject.toml
docs/: anndata_scanpy_handoff.md  canonicalization_handbook.md  git-workflow.md  perttf_marson_xorion_adapter_smoke.md  phase-01-aggregated-materialization-contract.md  phase-01-contract-blueprint.md  phase-02-aggregated-backend-mapping.md  phase-02-inspector-workflow.md  phase-03-runtime-identity-and-loader-boundaries.md  phase-04-runtime-path-adaptation.md  phase-05-direct-csr-builder.md  v0-default-backend-decision.md  v0-follow-up-backlog.md  v0-onboarding-workflow.md
scripts/: draft_canonicalization_schema.py  perttf_marson_xorion_smoke.py
tests/: test_backend_writers.py  test_batch_executor.py  test_canonical_drafting.py  test_canonical_loader.py  test_canonical_runner.py  test_cli.py  test_corpus_loader.py  test_cross_backend_validation.py  test_csr_cache.py  test_csr_memmap_reader.py  test_csr_memmap_writer.py  test_direct_csr_builder.py  test_dynamic_hvg_sampling.py  test_expression_reader.py  test_gene_token_mapper.py  test_gene_tokenizer.py  test_hf_datasets_backend.py  test_hvg_backfill.py  test_hvg_emission.py  test_inspector_workflow.py  test_loaders.py  test_materializers.py  test_metadata_index.py  test_new_architecture_equivalence.py  test_new_architecture_federated.py  test_new_architecture_smoke.py  test_obs_filter_materialization.py  test_perttf_adapter.py  test_perttf_pair_sampler.py  test_perttf_paired_batch_builder.py  test_phase02_aggregate_streaming.py  test_recalc_hvg.py  (+11 more)
(+80 files in other folders)
